[gd_scene load_steps=7 format=3 uid="uid://b20qyvib4hu52"]

[ext_resource type="Script" path="res://scenes & scripts/menu/MainMenu.gd" id="2_ti8ij"]
[ext_resource type="Texture2D" uid="uid://cgnxp0jjepcym" path="res://assets/sprites/buttons/a_button.png" id="3_7sh2c"]
[ext_resource type="Theme" uid="uid://dxnhffmfb2hde" path="res://assets/themes/new_theme.tres" id="3_i51tq"]
[ext_resource type="Texture2D" uid="uid://cny5vlfq1voyw" path="res://assets/sprites/buttons/b_button.png" id="4_kxs8b"]
[ext_resource type="Texture2D" uid="uid://mgb8xxk30hnr" path="res://assets/sprites/buttons/x_button.png" id="4_nkhm6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijri5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_ti8ij")

[node name="Main" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i51tq")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Bubble Ball"
horizontal_alignment = 1

[node name="MainPlayButton" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="MainOptionsButton" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="MainQuitButton" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i51tq")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Option..."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Option..."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Option..."
horizontal_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Option..."
horizontal_alignment = 1

[node name="SettingsBackButton" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="AddPlayers" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i51tq")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/AddPlayers"]
layout_mode = 2
offset_left = 159.0
offset_top = 30.0
offset_right = 481.0
offset_bottom = 240.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/AddPlayers/CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 210)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AddPlayersText" type="Label" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Add Players"
horizontal_alignment = 1

[node name="PlayersAndPrompt" type="HBoxContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AddPlayersGraphic" type="VBoxContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlayersAndPrompt"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlayersAndPrompt/AddPlayersGraphic"]
layout_mode = 2
text = "Join"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlayersAndPrompt/AddPlayersGraphic"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_7sh2c")
stretch_mode = 2

[node name="HoldXToStartGraphic" type="PanelContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BackToMenuGraphic" type="HBoxContainer" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic/MarginContainer/BackToMenuGraphic"]
layout_mode = 2
size_flags_horizontal = 4
text = "To Start, Press"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic/MarginContainer/BackToMenuGraphic"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_nkhm6")
stretch_mode = 2

[node name="AddPlayersBackButton" type="Button" parent="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/hover = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/focus = SubResource("StyleBoxFlat_ijri5")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/AddPlayers"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -94.0
offset_right = 70.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/AddPlayers/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BackToMenuGraphic" type="VBoxContainer" parent="CanvasLayer/AddPlayers/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/AddPlayers/PanelContainer/MarginContainer/BackToMenuGraphic"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AddPlayers/PanelContainer/MarginContainer/BackToMenuGraphic"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_kxs8b")
stretch_mode = 2

[node name="AddPlayersBackButton" type="Button" parent="CanvasLayer/AddPlayers/PanelContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/hover = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ijri5")
theme_override_styles/focus = SubResource("StyleBoxFlat_ijri5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainPlayButton" to="CanvasLayer" method="_on_main_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainOptionsButton" to="CanvasLayer" method="_on_main_options_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainQuitButton" to="CanvasLayer" method="_on_main_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/SettingsBackButton" to="CanvasLayer" method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/AddPlayers/CenterContainer/VBoxContainer/HoldXToStartGraphic/AddPlayersBackButton" to="CanvasLayer" method="_on_add_players_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/AddPlayers/PanelContainer/AddPlayersBackButton" to="CanvasLayer" method="_on_add_players_back_button_pressed"]
